Mit Colab erstellt

--- a/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
+++ b/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
@@ -1461,11 +1461,11 @@
         "!wc -l train.en-de dev.en-de test.en-de"
       ],
       "metadata": {
-        "id": "Exrv3I2yiFQL",
-        "outputId": "338de193-d769-4850-8928-974bc9344212",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Exrv3I2yiFQL",
+        "outputId": "338de193-d769-4850-8928-974bc9344212"
       },
       "execution_count": 19,
       "outputs": [
@@ -1490,11 +1490,11 @@
         "!bicleaner-hardrules -s en -t de test.en-de test.en-de.classified"
       ],
       "metadata": {
-        "id": "-zEV_snkbUOy",
-        "outputId": "b1fcff0a-b624-48e8-99ec-8d5b1a9a518b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-zEV_snkbUOy",
+        "outputId": "b1fcff0a-b624-48e8-99ec-8d5b1a9a518b"
       },
       "execution_count": 15,
       "outputs": [
@@ -1590,11 +1590,11 @@
         "!wc -l test.en-de.clean test.en-de.clean.en test.en-de.clean.de"
       ],
       "metadata": {
-        "id": "MsIIWKpThlDj",
-        "outputId": "b51d18d0-62d0-4996-eb30-bbb35bcb439b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MsIIWKpThlDj",
+        "outputId": "b51d18d0-62d0-4996-eb30-bbb35bcb439b"
       },
       "execution_count": 18,
       "outputs": [
@@ -1749,11 +1749,11 @@
         "!head dev.en-de.bpe.en"
       ],
       "metadata": {
-        "id": "3ckcTO8mpfd_",
-        "outputId": "ed01f115-6d90-4a2c-97d3-367ddffbf139",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3ckcTO8mpfd_",
+        "outputId": "ed01f115-6d90-4a2c-97d3-367ddffbf139"
       },
       "execution_count": 25,
       "outputs": [
@@ -1782,11 +1782,11 @@
         "!head test.en-de.bpe.en"
       ],
       "metadata": {
-        "id": "DyT628TjpjmD",
-        "outputId": "394970d1-c866-48ea-a670-a88bdb8c2e62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DyT628TjpjmD",
+        "outputId": "394970d1-c866-48ea-a670-a88bdb8c2e62"
       },
       "execution_count": 26,
       "outputs": [
@@ -1853,11 +1853,11 @@
         "!head train.en-de.clean_bpe.en"
       ],
       "metadata": {
-        "id": "0XWPlt4_qAiG",
-        "outputId": "0412676c-c10f-4949-ab92-3ea857483a81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0XWPlt4_qAiG",
+        "outputId": "0412676c-c10f-4949-ab92-3ea857483a81"
       },
       "execution_count": 31,
       "outputs": [
@@ -1885,11 +1885,11 @@
         "!head train.en-de.clean_bpe.de"
       ],
       "metadata": {
-        "id": "n6FMdJK1qZpr",
-        "outputId": "cbc4830a-c057-417b-853d-f507e2481a94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n6FMdJK1qZpr",
+        "outputId": "cbc4830a-c057-417b-853d-f507e2481a94"
       },
       "execution_count": 32,
       "outputs": [
@@ -1910,6 +1910,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "last step: download files\n",
+        "\n",
+        "- train.en-de.bpe.en\n",
+        "- train.en-de.bpe.de\n",
+        "- dev.en-de.bpe.en\n",
+        "- dev.en-de.bpe.de\n",
+        "- test.en-de.bpe.en\n",
+        "- test.en-de.bpe.de"
+      ],
+      "metadata": {
+        "id": "fj50jDA8uJ8D"
+      }
     }
   ],
   "metadata": {
