Mit Colab erstellt

--- a/week3_files/txt2tmx.ipynb
+++ b/week3_files/txt2tmx.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "puaNWDE9DNfg",
-        "outputId": "3161b108-cfd3-4303-a58f-ca89fbdc5c75"
+        "outputId": "79fac43d-46c6-4601-ce2f-e81dee01ab33"
       },
       "outputs": [
         {
@@ -30,16 +30,16 @@
           "name": "stdout",
           "text": [
             "Collecting translate-toolkit\n",
-            "  Downloading translate_toolkit-3.14.8-py3-none-any.whl.metadata (12 kB)\n",
-            "Collecting cwcwidth>=0.1.9 (from translate-toolkit)\n",
+            "  Downloading translate_toolkit-3.15.1-py3-none-any.whl.metadata (10 kB)\n",
+            "Collecting cwcwidth<0.2,>=0.1.10 (from translate-toolkit)\n",
             "  Downloading cwcwidth-0.1.10-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.0 kB)\n",
-            "Requirement already satisfied: lxml>=4.6.3 in /usr/local/lib/python3.11/dist-packages (from translate-toolkit) (5.3.1)\n",
-            "Downloading translate_toolkit-3.14.8-py3-none-any.whl (745 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m745.4/745.4 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "Requirement already satisfied: lxml<5.4,>=5.2.0 in /usr/local/lib/python3.11/dist-packages (from translate-toolkit) (5.3.1)\n",
+            "Downloading translate_toolkit-3.15.1-py3-none-any.whl (744 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m744.9/744.9 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading cwcwidth-0.1.10-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (100 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m100.4/100.4 kB\u001b[0m \u001b[31m11.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m100.4/100.4 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: cwcwidth, translate-toolkit\n",
-            "Successfully installed cwcwidth-0.1.10 translate-toolkit-3.14.8\n"
+            "Successfully installed cwcwidth-0.1.10 translate-toolkit-3.15.1\n"
           ]
         }
       ],
@@ -51,16 +51,49 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "#clone repo from Github and navigate to correct working directory\n",
+        "!git clone https://github.com/fubotz/BMT_2025S\n",
+        "%cd BMT_2025S/week3_files"
+      ],
+      "metadata": {
+        "id": "uNYivetsKDq7",
+        "outputId": "fbd396b9-f52d-441b-f9bf-63ac472da828",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'BMT_2025S'...\n",
+            "remote: Enumerating objects: 132, done.\u001b[K\n",
+            "remote: Counting objects: 100% (132/132), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (110/110), done.\u001b[K\n",
+            "remote: Total 132 (delta 44), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (132/132), 11.69 MiB | 5.07 MiB/s, done.\n",
+            "Resolving deltas: 100% (44/44), done.\n",
+            "/content/BMT_2025S/week3_files\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import os\n",
         "import codecs\n",
+        "\n",
         "# Import BeautifulSoup\n",
         "import re\n",
         "from translate.storage.tmx import tmxfile\n",
         "from translate.storage.trados import TradosTxtTmFile\n",
-        "content = []\n",
-        "# Read the XML file\n",
         "\n",
+        "content = []\n",
+        "\n",
+        "# Read the XML file\n",
         "def main(args):\n",
         "    st, src_in, trg_in, output = args\n",
         "    src, trg = st.split('-')\n",
@@ -80,28 +113,27 @@
         "    #print(str(tmx_o.__str__()), file=xml_file)\n",
         "    tmx_o.savefile(output)\n",
         "\n",
-        "\n",
         "    return"
       ],
       "metadata": {
         "id": "B9HDtg_SSBct"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "st = 'en-de'\n",
-        "src_in = 'Vienna_Environmental.en-de.test.en'\n",
-        "trg_in = 'Vienna_Environmental.en-de.test.nllb.de'\n",
+        "src_in = 'en.txt'\n",
+        "trg_in = 'nllb.de.txt'\n",
         "output = 'Vienna_Environmental_en-de_nllb.tmx'\n",
         "main((st, src_in, trg_in, output))"
       ],
       "metadata": {
         "id": "EUkyy7ZdSXsa"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -116,7 +148,7 @@
       "metadata": {
         "id": "L9Sk8Q-oRa8i"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
