Mit Colab erstellt

--- a/week4_files/toy_pytorch_binaryclassifier_BMT2025S.ipynb
+++ b/week4_files/toy_pytorch_binaryclassifier_BMT2025S.ipynb
@@ -22,7 +22,6 @@
         "outputId": "6719c039-4ead-44b4-bfb6-bcb11bff2886"
       },
       "source": [
-        "\n",
         "#import libraries\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -37,11 +36,11 @@
         "\n",
         "# create data with positive instances (X2, Y2) and negative (X1, Y1)\n",
         "#[N, F] number of instances, features\n",
-        "X1 = torch.randn(1000, 50) #instances, features/variables\n",
+        "X1 = torch.randn(1000, 50)  #instances, features/variables\n",
         "X2 = torch.randn(1000, 50) + 1.5\n",
         "X = torch.cat([X1, X2], dim=0)\n",
-        "Y1 = torch.zeros(1000, 1) #negative instances\n",
-        "Y2 = torch.ones(1000, 1) #positive instances\n",
+        "Y1 = torch.zeros(1000, 1)   #negative instances\n",
+        "Y2 = torch.ones(1000, 1)    #positive instances\n",
         "Y = torch.cat([Y1, Y2], dim=0)\n",
         "#[N, F] instances, features\n",
         "print(X.size())\n",
@@ -114,28 +113,28 @@
         "\n",
         "    def __init__(self, feat_size=50, hidden_size=100, num_labels=1, dropout=0.2):\n",
         "      super().__init__()\n",
-        "      self.fc1 = nn.Linear(feat_size, feat_size) #Wx + b\n",
+        "      self.fc1 = nn.Linear(feat_size, feat_size)    #Wx + b\n",
         "      self.relu = nn.ReLU() #tanh, sigmoid, etc\n",
-        "      self.dout = nn.Dropout(dropout) #regularization\n",
-        "      self.fc2 = nn.Linear(feat_size, hidden_size) #Wx + b\n",
+        "      self.dout = nn.Dropout(dropout)   #regularization\n",
+        "      self.fc2 = nn.Linear(feat_size, hidden_size)  #Wx + b\n",
         "      self.out = nn.Linear(hidden_size, num_labels) #classifier\n",
         "      self.out_act = nn.Sigmoid()\n",
         "\n",
         "    def forward(self, x):\n",
         "      #[B, F] batch, features\n",
-        "      h1 = self.fc1(x) #linear\n",
+        "      h1 = self.fc1(x)  #linear\n",
         "      #[B, F]\n",
-        "      h1 = self.relu(h1) # h1 = relu(Wx + b) hidden layer\n",
-        "      h1 = self.dout(h1) # regularize\n",
+        "      h1 = self.relu(h1)    #h1 = relu(Wx + b) hidden layer\n",
+        "      h1 = self.dout(h1)    #regularize\n",
         "      #[B, H] batch, hidden\n",
         "      h2 = self.fc2(h1)\n",
         "      #[B, 1] classifier\n",
-        "      logits = self.out(h2) # Wh2 + b un normalized prob\n",
-        "      probs = self.out_act(logits) # sigmoid [0, 1]\n",
+        "      logits = self.out(h2) #Wh2 + b un normalized prob\n",
+        "      probs = self.out_act(logits)  #sigmoid [0, 1]\n",
         "      return logits, probs\n",
         "\n",
-        "# model\n",
-        "model = Net(dropout=0.3) #ins\n",
+        "#model\n",
+        "model = Net(dropout=0.3)    #ins\n",
         "print(model)\n",
         "#check for device\n",
         "device = torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
@@ -144,7 +143,7 @@
         "#define adam optimizer\n",
         "opt = optim.Adam(model.parameters(), lr=1e-3)\n",
         "#define binary loss\n",
-        "criterion = nn.BCEWithLogitsLoss() # sum y log prob(x) / y sigmoid(Wh2 +b)"
+        "criterion = nn.BCEWithLogitsLoss()  #sum y log prob(x) / y sigmoid(Wh2 +b)"
       ],
       "execution_count": null,
       "outputs": [
@@ -201,8 +200,8 @@
         "#define hyperparameters\n",
         "\n",
         "e_losses = []\n",
-        "num_epochs = 20 # time i go over the data\n",
-        "batch_size=50 # n instances at  time\n",
+        "num_epochs = 20 #time i go over the data\n",
+        "batch_size=50   #n instances at  time\n",
         "\n",
         "#2000 steps min SGD, fit in the GPU\n",
         "# mini batch improves\n",
@@ -220,19 +219,20 @@
         "    y_batch = y_batch.to(device)\n",
         "\n",
         "    opt.zero_grad()\n",
-        "    # (1) Forward\n",
+        "    #(1) Forward\n",
         "    y_logits, y_probs = model(x_batch) #theta = {wwwwwwbbb}\n",
-        "    # (2) Compute loss\n",
+        "    #(2) Compute loss\n",
         "    loss = criterion(y_logits, y_batch)\n",
         "    #save loss of batch\n",
-        "    # i want to save every 100 steps\n",
+        "    #i want to save every 100 steps\n",
         "    loss_batch.append(loss.item())\n",
-        "    # (3) Compute gradients\n",
+        "    #(3) Compute gradients\n",
         "    loss.backward()\n",
-        "    # (4) update weights\n",
+        "    #(4) update weights\n",
         "    opt.step()\n",
         "\n",
         "  e_losses += loss_batch\n",
+        "\n",
         "#plot loss over epochs\n",
         "plt.plot(e_losses)"
       ],
@@ -271,16 +271,16 @@
       },
       "source": [
         "#prediction\n",
-        "x_t = torch.randn(1, 50) # y= 0\n",
+        "x_t = torch.randn(1, 50)    #y=0\n",
         "x_t = x_t.to(device)\n",
         "\n",
         "model.eval()\n",
         "y_logit, y_prob = model(x_t)\n",
-        "print('y=0',y_prob.item()) #\n",
+        "print('y=0',y_prob.item())\n",
         "x_1_t = torch.randn(1, 50) + 1.5\n",
         "x_1_t = x_1_t.to(device)\n",
         "y1_logit, y1_prob = model(x_1_t)\n",
-        "print('y=1',y1_prob.item())\n"
+        "print('y=1',y1_prob.item())"
       ],
       "execution_count": null,
       "outputs": [
