Mit Colab erstellt

--- a/week5_files/toy_lstm_pytorch_binaryclassifier_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week5_files/toy_lstm_pytorch_binaryclassifier_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -211,7 +211,8 @@
         "    e_losses += loss_batch\n",
         "\n",
         "#plot loss over epochs (tracks batch-level losses; NOT epoch-averaged)\n",
-        "plt.plot(e_losses)"
+        "plt.plot(e_losses)\n",
+        "plt.title('Training Loss for Net')"
       ],
       "execution_count": 4,
       "outputs": [
@@ -353,18 +354,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initialize the model\n",
+        "#initialize the model\n",
         "model = NetLast()\n",
         "model = model.to(device)\n",
         "\n",
         "#print architecture\n",
         "print(model)\n",
         "\n",
-        "# Define optimizer and loss function\n",
+        "#define optimizer and loss function\n",
         "opt = optim.Adam(model.parameters(), lr=1e-3)\n",
         "criterion = nn.BCEWithLogitsLoss()\n",
         "\n",
-        "# Training loop\n",
+        "#training loop\n",
         "e_losses = []\n",
         "num_epochs = 20\n",
         "batch_size = 64\n",
@@ -393,7 +394,8 @@
         "    e_losses += loss_batch\n",
         "\n",
         "#plot loss over epochs (tracks batch-level losses; NOT epoch-averaged)\n",
-        "plt.plot(e_losses)"
+        "plt.plot(e_losses)\n",
+        "plt.title('Training Loss for NetLast')"
       ],
       "metadata": {
         "colab": {
@@ -467,11 +469,11 @@
         "print(y1_prob.item())"
       ],
       "metadata": {
-        "id": "yigcD73B00Pp",
-        "outputId": "0708ec11-b7c9-424d-87ce-12080adebdc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yigcD73B00Pp",
+        "outputId": "0708ec11-b7c9-424d-87ce-12080adebdc1"
       },
       "execution_count": 11,
       "outputs": [
@@ -506,22 +508,30 @@
       "metadata": {
         "id": "RYfhmRB3x8kD"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Train NetBiLSTM\n",
-        "opt = optim.Adam(netbilstm_model.parameters(), lr=1e-3)\n",
+        "#initialize the model\n",
+        "model = NetBiLSTM()\n",
+        "model = model.to(device)\n",
+        "\n",
+        "#print architecture\n",
+        "print(model)\n",
+        "\n",
+        "#define optimizer and loss function\n",
+        "opt = optim.Adam(model.parameters(), lr=1e-3)\n",
         "criterion = nn.BCEWithLogitsLoss()\n",
         "\n",
+        "#traning loop\n",
         "e_losses = []\n",
         "num_epochs = 20\n",
         "batch_size = 64\n",
         "\n",
         "for e in range(num_epochs):\n",
-        "    netbilstm_model.train()\n",
+        "    model.train()\n",
         "    loss_batch = []\n",
         "    for beg_i in range(0, X.size(0), batch_size):\n",
         "        x_batch = X[beg_i:beg_i + batch_size, :]\n",
@@ -531,7 +541,7 @@
         "\n",
         "        opt.zero_grad()\n",
         "\n",
-        "        y_logits, y_probs = netbilstm_model(x_batch)\n",
+        "        y_logits, y_probs = model(x_batch)\n",
         "\n",
         "        loss = criterion(y_logits, y_batch)\n",
         "        loss_batch.append(loss.item())\n",
@@ -539,15 +549,11 @@
         "        loss.backward()\n",
         "        opt.step()\n",
         "\n",
-        "    avg_epoch_loss = sum(loss_batch) / len(loss_batch)\n",
-        "    e_losses.append(avg_epoch_loss)\n",
+        "    e_losses += loss_batch\n",
         "\n",
-        "# Plot training loss\n",
-        "plt.plot(range(1, num_epochs+1), e_losses)\n",
-        "plt.xlabel('Epoch')\n",
-        "plt.ylabel('Average Loss')\n",
-        "plt.title('Training Loss for NetBiLSTM')\n",
-        "plt.show()\n"
+        "#plot loss over epochs (tracks batch-level losses; NOT epoch-averaged)\n",
+        "plt.plot(e_losses)\n",
+        "plt.title('Training Loss for NetBiLSTM')"
       ],
       "metadata": {
         "id": "pjYLUI0_2Bo5"
