Mit Colab erstellt

--- a/week5_files/toy_lstm_pytorch_binaryclassifier_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week5_files/toy_lstm_pytorch_binaryclassifier_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -425,48 +425,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#initialize the model\n",
-        "model = NetLast()\n",
-        "model = model.to(device)\n",
-        "\n",
-        "#print architecture\n",
-        "print(model)\n",
-        "\n",
-        "#define optimizer and loss function\n",
-        "opt = optim.Adam(model.parameters(), lr=1e-3)\n",
-        "criterion = nn.BCEWithLogitsLoss()\n",
-        "\n",
-        "#training loop\n",
-        "e_losses = []\n",
-        "num_epochs = 20\n",
-        "batch_size = 64\n",
-        "\n",
-        "for e in range(num_epochs):\n",
-        "    model.train()\n",
-        "    loss_batch = []\n",
-        "\n",
-        "    for beg_i in range(0, X.size(0), batch_size):\n",
-        "        x_batch = X[beg_i:beg_i + batch_size, :]\n",
-        "        y_batch = Y[beg_i:beg_i + batch_size, :]\n",
-        "        x_batch = x_batch.to(device)\n",
-        "        y_batch = y_batch.to(device)\n",
-        "\n",
-        "        opt.zero_grad()\n",
-        "\n",
-        "        y_logits, y_probs = model(x_batch)\n",
-        "\n",
-        "        loss = criterion(y_logits, y_batch)\n",
-        "        loss_batch.append(loss.item())\n",
-        "\n",
-        "        loss.backward()\n",
-        "\n",
-        "        opt.step()\n",
-        "\n",
-        "    e_losses += loss_batch\n",
-        "\n",
-        "#plot loss over epochs (tracks batch-level losses; NOT epoch-averaged)\n",
-        "plt.plot(e_losses)\n",
-        "plt.title('Training Loss for NetLast')"
+        "# === Train NetLast ===\n",
+        "model_netlast = train_model(NetLast, 'NetLast', X, Y, device=device)"
       ],
       "metadata": {
         "colab": {
@@ -525,19 +485,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#set model to evaluation mode and get predictions\n",
-        "model.eval()\n",
-        "\n",
-        "#prediction\n",
-        "x_t = torch.randn(1, 5000, 100)     #create test sample (batch size=1)\n",
-        "x_t = x_t.to(device)\n",
-        "y_logit, y_prob = model(x_t)        #curve centered at 0 (--> label 0)\n",
-        "print(y_prob.item())\n",
-        "\n",
-        "x_1_t = torch.randn(1, 5000, 100) + 1.5     #create test sample but shifted (batch size=1)\n",
-        "x_1_t = x_1_t.to(device)\n",
-        "y1_logit, y1_prob = model(x_1_t)    #curve centered at 1.5 (--> label 1)\n",
-        "print(y1_prob.item())"
+        "# === Evaluate NetLast ===\n",
+        "evaluate_model(model_netlast, device=device)"
       ],
       "metadata": {
         "colab": {
