Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -4408,21 +4408,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jk-5PzlAgL3H",
-        "outputId": "a2906e7e-0167-4222-af9e-3560e58f9274"
+        "outputId": "46b97064-e621-4c60-bd5d-d0e1eb978ff2"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'BMT_2025S'...\n",
-            "remote: Enumerating objects: 446, done.\u001b[K\n",
-            "remote: Counting objects: 100% (78/78), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (70/70), done.\u001b[K\n",
-            "remote: Total 446 (delta 47), reused 8 (delta 8), pack-reused 368 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (446/446), 167.98 MiB | 25.62 MiB/s, done.\n",
-            "Resolving deltas: 100% (222/222), done.\n",
+            "remote: Enumerating objects: 465, done.\u001b[K\n",
+            "remote: Counting objects: 100% (97/97), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (88/88), done.\u001b[K\n",
+            "remote: Total 465 (delta 59), reused 8 (delta 8), pack-reused 368 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (465/465), 170.52 MiB | 37.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (234/234), done.\n",
             "/content/BMT_2025S/week10_files\n"
           ]
         }
@@ -5786,6 +5786,58 @@
       "metadata": {
         "id": "he8oDN01eA13"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 1: Get Data\n",
+        "\n",
+        "- Dataset downloaded from Opus en-de (EuroPat - v3): https://opus.nlpl.eu/EuroPat/en&de/v3/EuroPat\n",
+        "\n",
+        "- Created cut_dataset.py and wrote local script to extract first 20k segments from EuroPat.de-en.de and EuroPat.de-en.en:\n",
+        "\n",
+        "```python\n",
+        "import zipfile\n",
+        "\n",
+        "def extract_first_20k_from_zip(zip_path, out_src_path, out_tgt_path, src_file=\"EuroPat.de-en.en\", tgt_file=\"EuroPat.de-en.de\", max_lines=20000):\n",
+        "    with zipfile.ZipFile(zip_path, 'r') as z:\n",
+        "        with z.open(src_file) as src_f, z.open(tgt_file) as tgt_f:\n",
+        "            with open(out_src_path, 'w', encoding='utf-8') as out_src, \\\n",
+        "                 open(out_tgt_path, 'w', encoding='utf-8') as out_tgt:\n",
+        "\n",
+        "                for i, (src_line, tgt_line) in enumerate(zip(src_f, tgt_f)):\n",
+        "                    if i >= max_lines:\n",
+        "                        break\n",
+        "                    out_src.write(src_line.decode('utf-8'))\n",
+        "                    out_tgt.write(tgt_line.decode('utf-8'))\n",
+        "\n",
+        "    print(max_lines)\n",
+        "    print(out_src_path)\n",
+        "    print(out_tgt_path)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    extract_first_20k_from_zip(\n",
+        "        zip_path=\"EuroPat.de-en.txt.zip\",\n",
+        "        out_src_path=\"EuroPat.de-en.20k.en\",\n",
+        "        out_tgt_path=\"EuroPat.de-en.20k.de\"\n",
+        "    )\n",
+        "```\n",
+        "\n",
+        "- The extracted files were then uploaded to GitHub"
+      ],
+      "metadata": {
+        "id": "KkG-ap858lRk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1adF5kTe-Hww"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
