Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -5792,9 +5792,9 @@
       "source": [
         "# Step 1: Get Data\n",
         "\n",
-        "- Dataset downloaded from Opus en-de (EuroPat - v3): https://opus.nlpl.eu/EuroPat/en&de/v3/EuroPat\n",
+        "- Dataset downloaded from Opus en-de moses format (EuroPat - v3): https://opus.nlpl.eu/EuroPat/en&de/v3/EuroPat\n",
         "\n",
-        "- Created cut_dataset.py and wrote local script to extract first 20k segments from EuroPat.de-en.de and EuroPat.de-en.en:\n",
+        "- Created local script cut_dataset.py that extracts first 20k segments from files EuroPat.de-en.de and EuroPat.de-en.en in folder EuroPat.de-en.txt.zip:\n",
         "\n",
         "```python\n",
         "import zipfile\n",
@@ -5824,7 +5824,7 @@
         "    )\n",
         "```\n",
         "\n",
-        "- The extracted files were then uploaded to GitHub"
+        "- The cut files were subsequentially uploaded to GitHub (https://github.com/fubotz/BMT_2025S)"
       ],
       "metadata": {
         "id": "KkG-ap858lRk"
@@ -5832,9 +5832,71 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#create bilingual .json\n"
+      ],
       "metadata": {
         "id": "1adF5kTe-Hww"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Clean Data"
+      ],
+      "metadata": {
+        "id": "-PfvlV1dEC2j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1JxJRk1YEIR8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Finetune"
+      ],
+      "metadata": {
+        "id": "ngvh3zWfEIo4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2PLhDlvzEM6E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 4: Inference\n"
+      ],
+      "metadata": {
+        "id": "fFgM8x_RENcf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#translate Vienna...:\n",
+        "\n",
+        "#greedy\n",
+        "#beam_6\n",
+        "#similar corpus with beam_6"
+      ],
+      "metadata": {
+        "id": "1xHXcz4uETVv"
       },
       "execution_count": null,
       "outputs": []
