Mit Colab erstellt

--- a/week9_files/generate_translation_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week9_files/generate_translation_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -277,7 +277,7 @@
       "source": [
         "#clone repo from Github and navigate to correct working directory\n",
         "!git clone https://github.com/fubotz/BMT_2025S\n",
-        "%cd BMT_2025S/week9_files"
+        "%cd /content/BMT_2025S/week9_files"
       ],
       "metadata": {
         "colab": {
@@ -300,7 +300,7 @@
         "id": "stOJBgSHJR0R",
         "outputId": "0eaf4b6f-fd95-4399-8ef0-a75ba4440cb2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "sCNo1BiT6WQL"
       },
@@ -399,7 +399,7 @@
         "id": "bLlcdTuhPwGQ",
         "outputId": "3fe51377-3d91-43d9-fe87-67c311135b3a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
         "id": "wlb2eYaqRHM7",
         "outputId": "939f2830-f72a-4626-e45f-4bf73815941f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
