Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -4457,7 +4457,7 @@
         "        for line_s, line_t in zip(src, trg):\n",
         "            line_s = line_s.strip()\n",
         "            line_t = line_t.strip()\n",
-        "            out = {\"translation\": {src_id: line_s, trg_id: line_t}}\n",
+        "            out = { \"translation\": { src_id: line_s, trg_id: line_t } }\n",
         "            x = json.dumps(out, ensure_ascii=False)\n",
         "            out_json.write(x + \"\\n\")\n",
         "\n",
@@ -4466,7 +4466,7 @@
       "metadata": {
         "id": "70uOsNJMMnce"
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -4488,18 +4488,18 @@
       ],
       "metadata": {
         "id": "LuaqXaq_M24N",
-        "outputId": "d5b22c17-75b6-4e9b-d020-741d04fa4882",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1e1bf1e9-5753-4663-8401-4d977b5cadd1"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ JSON file created at: Vienna_Environmental.en-de.train.json\n"
+            "JSON file created: Vienna_Environmental.en-de.train.json\n"
           ]
         }
       ]
@@ -5620,10 +5620,10 @@
       ],
       "metadata": {
         "id": "1Uwmek5wy_k5",
-        "outputId": "d5e2cd68-63f5-40f7-b26b-454be329774f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d5e2cd68-63f5-40f7-b26b-454be329774f"
       },
       "execution_count": 9,
       "outputs": [
@@ -5871,18 +5871,18 @@
       ],
       "metadata": {
         "id": "1adF5kTe-Hww",
-        "outputId": "27755541-ac0c-4c37-d8c0-a5238303dd51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7edc08a0-8ebe-4558-cd86-dffd9c2cb92b"
       },
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ JSON file created at: EuroPat.de-en.20k.train.json\n"
+            "JSON file created: EuroPat.de-en.20k.train.json\n"
           ]
         }
       ]
@@ -5893,11 +5893,11 @@
         "!head EuroPat.de-en.20k.train.json"
       ],
       "metadata": {
-        "id": "gOynwnfSKPl8",
-        "outputId": "325e29d1-feec-4a43-c906-2d08ebe3d78c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gOynwnfSKPl8",
+        "outputId": "325e29d1-feec-4a43-c906-2d08ebe3d78c"
       },
       "execution_count": 17,
       "outputs": [
